# RealtimeBarcodeTracker

./: .gitignore  README.md
BarcodeDecoder/app/: build.gradle
BarcodeDecoder/app/src/androidTest/java/com/amila/barcodedecoder/: ExampleInstrumentedTest.java
BarcodeDecoder/app/src/main/: AndroidManifest.xml
BarcodeDecoder/app/src/main/cpp/: native-lib.cpp
BarcodeDecoder/app/src/main/java/com/amila/barcodedecoder/: MainActivity.java
BarcodeDecoder/app/src/main/res/values/: strings.xml
BarcodeDecoder/app/src/test/java/com/amila/barcodedecoder/: ExampleUnitTest.java
BarcodeDecoder/gradle/wrapper/: gradle-wrapper.properties
BarcodeDecoder/openCVLibrary343/: build.gradle
BarcodeTracker/: .gitignore  import-summary.txt  settings.gradle
BarcodeTracker/app/: build.gradle
BarcodeTracker/app/src/androidTest/java/com/amila/barcodetracker/: ExampleInstrumentedTest.java
BarcodeTracker/app/src/main/: AndroidManifest.xml
BarcodeTracker/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
BarcodeTracker/app/src/main/cpp/camera/: android_main.cpp
BarcodeTracker/app/src/main/cpp/common/utils/: native_debug.h
BarcodeTracker/app/src/main/java/com/amila/barcodetracker/: MainActivity.java
BarcodeTracker/app/src/main/res/layout/: activity_main.xml
BarcodeTracker/app/src/main/res/values/: strings.xml
BarcodeTracker/app/src/test/java/com/amila/barcodetracker/: ExampleUnitTest.java
BarcodeTracker/gradle/wrapper/: gradle-wrapper.properties
BarcodeTracker/openCVLibrary347/: build.gradle
BarcodeTracker/openCVLibrary347/src/main/: AndroidManifest.xml
BarcodeTracker/openCVLibrary347/src/main/java/org/opencv/android/: JavaCameraView.java  OpenCVLoader.java
BarcodeTracker/openCVLibrary347/src/main/java/org/opencv/calib3d/: Calib3d.java
BarcodeTracker/openCVLibrary347/src/main/java/org/opencv/core/: Core.java
BarcodeTracker/openCVLibrary347/src/main/java/org/opencv/imgcodecs/: Imgcodecs.java
BarcodeTracker/openCVLibrary347/src/main/java/org/opencv/imgproc/: Imgproc.java
BarcodeTracker/openCVLibrary347/src/main/java/org/opencv/videoio/: Videoio.java
NativeBarcodeTracker/app/: build.gradle
NativeBarcodeTracker/app/src/androidTest/java/com/amilaabeygunasekara/nativebarcodetracker/: ExampleInstrumentedTest.java
NativeBarcodeTracker/app/src/main/: AndroidManifest.xml
NativeBarcodeTracker/app/src/main/cpp/: CMakeLists.txt  CV_Main.cpp  CV_Main.h  Image_Reader.cpp  Image_Reader.h  Native_Camera.cpp  Native_Camera.h  Util.h  native-lib.cpp
NativeBarcodeTracker/app/src/main/java/com/amilaabeygunasekara/nativebarcodetracker/: MainActivity.java
NativeBarcodeTracker/app/src/main/res/layout/: activity_main.xml
NativeBarcodeTracker/app/src/main/res/values/: strings.xml  styles.xml
NativeBarcodeTracker/app/src/test/java/com/amilaabeygunasekara/nativebarcodetracker/: ExampleUnitTest.java
NativeBarcodeTracker/gradle/wrapper/: gradle-wrapper.properties
